--- a/terms.html
+++ b/terms.html
@@ -2,13 +2,48 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Conditions d'utilisation - Emealy</title>
+  <style>
+    body { font-family: system-ui, sans-serif; max-width: 800px; margin: 40px auto; line-height: 1.6; color: #222; padding: 0 16px; }
+    h1, h2 { color: #333; }
+    a { color: #0070f3; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
   <h1>Conditions d'utilisation</h1>
-  <p>Bienvenue sur Emealy, votre assistant de génération de recettes personnalisées grâce à l’intelligence artificielle.</p>
-  <p>En utilisant notre application, vous acceptez les présentes conditions. Vous vous engagez à ne pas copier ni redistribuer les contenus générés sans autorisation.</p>
-  <p>Nous pouvons modifier ces conditions à tout moment ; la version la plus récente sera toujours disponible sur cette page.</p>
-  <p>Pour toute question, contactez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
+
+  <p>Bienvenue sur <strong>Emealy</strong> ! En utilisant notre application, vous acceptez sans réserve les présentes conditions d’utilisation. Nous vous invitons à les lire attentivement avant toute utilisation.</p>
+
+  <h2>1. Objet de l’application</h2>
+  <p>Emealy est une application mobile permettant de générer des recettes de cuisine personnalisées à l’aide de technologies d’intelligence artificielle. Les suggestions proposées sont destinées à un usage personnel et informatif.</p>
+
+  <h2>2. Accès et utilisation</h2>
+  <p>L’accès à Emealy nécessite une connexion Internet. Certaines fonctionnalités sont réservées aux membres premium. Vous vous engagez à utiliser l’application dans le respect de la loi et des droits des tiers.</p>
+
+  <h2>3. Contenus générés par l’IA</h2>
+  <p>Les recettes et textes générés automatiquement peuvent comporter des approximations. L’utilisateur reste responsable de vérifier les informations et d’adapter les préparations selon ses besoins ou contraintes alimentaires.</p>
+
+  <h2>4. Compte utilisateur</h2>
+  <p>Vous êtes responsable du maintien de la confidentialité de vos identifiants. Toute utilisation de votre compte est réputée avoir été faite par vous.</p>
+
+  <h2>5. Abonnements et paiements</h2>
+  <p>L’accès à certaines fonctionnalités est soumis à un abonnement. Les paiements sont gérés via l’App Store et soumis à leurs conditions. Aucune donnée bancaire n’est stockée par Emealy.</p>
+
+  <h2>6. Propriété intellectuelle</h2>
+  <p>L’ensemble des éléments de l’application (logo, interface, textes, images, code source, etc.) est la propriété exclusive de Emealy. Toute reproduction ou diffusion non autorisée est interdite.</p>
+
+  <h2>7. Responsabilité</h2>
+  <p>Emealy ne saurait être tenue responsable des dommages directs ou indirects résultant de l’utilisation de l’application, notamment en cas d’erreur dans les contenus générés ou d’indisponibilité temporaire du service.</p>
+
+  <h2>8. Modifications</h2>
+  <p>Nous nous réservons le droit de modifier les présentes conditions à tout moment. La version la plus récente est toujours disponible sur cette page.</p>
+
+  <h2>9. Contact</h2>
+  <p>Pour toute question, écrivez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
+
+  <p><em>Dernière mise à jour : octobre 2025</em></p>
 </body>
 </html>
+
