changement d' adresse mail

--- a/terms.html
+++ b/terms.html
@@ -41,7 +41,7 @@
   <p>Nous nous réservons le droit de modifier les présentes conditions à tout moment. La version la plus récente est toujours disponible sur cette page.</p>
 
   <h2>9. Contact</h2>
-  <p>Pour toute question, écrivez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
+  <p>Pour toute question, écrivez-nous à <a href="contact@alpacavisual.com">contact@emealy.app</a>.</p>
 
   <p><em>Dernière mise à jour : octobre 2025</em></p>
 </body>
