--- a/privacy.html
+++ b/privacy.html
@@ -13,37 +13,47 @@
 </head>
 <body>
   <h1>Politique de confidentialité</h1>
-
   <p>La protection de vos données personnelles est une priorité pour <strong>Emealy</strong>. Cette politique décrit la manière dont nous collectons, utilisons et protégeons vos informations.</p>
 
   <h2>1. Données collectées</h2>
-  <p>Emealy collecte uniquement les données nécessaires au fonctionnement du service : adresse e-mail, préférences alimentaires, et données d’utilisation (interactions, recettes générées). Aucune donnée sensible n’est requise.</p>
+  <p>Emealy collecte uniquement les données nécessaires au fonctionnement du service. Cela inclut :</p>
+  <ul>
+    <li>Adresse e-mail</li>
+    <li>Identifiant unique attribué à chaque utilisateur</li>
+    <li>Données d’utilisation liées aux recettes générées (nombre total de recettes, nombre sur 7 jours glissants, recettes générées associées à l’utilisateur)</li>
+    <li>Historique des achats et actions liées à l’utilisateur</li>
+  </ul>
+  <p>Aucune donnée sensible n’est requise</p>
 
   <h2>2. Finalité de la collecte</h2>
-  <p>Les données collectées permettent d’offrir une expérience personnalisée, d’améliorer la qualité des recettes générées et de gérer les abonnements utilisateurs.</p>
+  <p>Les données collectées permettent de :</p>
+  <ul>
+    <li>Fournir et améliorer le service Emealy</li>
+    <li>Offrir une expérience personnalisée</li>
+    <li>Gérer les abonnements et achats</li>
+  </ul>
 
   <h2>3. Partage et stockage</h2>
   <p>Vos données ne sont jamais vendues. Elles peuvent être hébergées sur des serveurs sécurisés appartenant à des prestataires tiers (par exemple Firebase ou Supabase), uniquement pour assurer le bon fonctionnement du service.</p>
 
   <h2>4. Sécurité</h2>
-  <p>Nous mettons en œuvre des mesures de sécurité techniques et organisationnelles pour protéger vos données contre tout accès non autorisé, modification, divulgation ou destruction.</p>
+  <p>Nous mettons en œuvre des mesures techniques et organisationnelles pour protéger vos données contre tout accès non autorisé, modification, divulgation ou destruction.</p>
 
   <h2>5. Conservation</h2>
-  <p>Les données sont conservées aussi longtemps que nécessaire pour vous fournir le service ou conformément à la législation en vigueur. Vous pouvez demander leur suppression à tout moment.</p>
+  <p>Les données sont conservées aussi longtemps que nécessaire pour fournir le service ou conformément à la législation en vigueur. Vous pouvez demander leur suppression à tout moment.</p>
 
   <h2>6. Vos droits</h2>
   <p>Conformément au RGPD, vous disposez d’un droit d’accès, de rectification, de suppression et de portabilité de vos données. Pour exercer ces droits, contactez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
 
   <h2>7. Cookies et analyses</h2>
-  <p>Emealy peut utiliser des outils d’analyse anonymisés pour améliorer ses performances (ex. statistiques d’usage). Aucun cookie publicitaire n’est utilisé.</p>
+  <p>Emealy peut utiliser des outils d’analyse anonymisés pour améliorer ses performances (par ex. statistiques d’usage). Aucun cookie publicitaire n’est utilisé.</p>
 
   <h2>8. Modifications</h2>
   <p>Cette politique peut être mise à jour à tout moment. La version en vigueur est toujours accessible à cette adresse.</p>
 
   <h2>9. Contact</h2>
-  <p>Pour toute question relative à la confidentialité, écrivez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
+  <p>Pour toute question relative à la confidentialité, écrivez-nous à <a href="contact@alpacavisual.com">contact@emealy.app</a>.</p>
 
   <p><em>Dernière mise à jour : octobre 2025</em></p>
 </body>
 </html>
-
