Update contact email in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
   <p>Les données sont conservées aussi longtemps que nécessaire pour fournir le service ou conformément à la législation en vigueur. Vous pouvez demander leur suppression à tout moment.</p>
 
   <h2>6. Vos droits</h2>
-  <p>Conformément au RGPD, vous disposez d’un droit d’accès, de rectification, de suppression et de portabilité de vos données. Pour exercer ces droits, contactez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
+  <p>Conformément au RGPD, vous disposez d’un droit d’accès, de rectification, de suppression et de portabilité de vos données. Pour exercer ces droits, contactez-nous à <a href="mailto:contact@alpacavisual.com">contact@emealy.app</a>.</p>
 
   <h2>7. Cookies et analyses</h2>
   <p>Emealy peut utiliser des outils d’analyse anonymisés pour améliorer ses performances (par ex. statistiques d’usage). Aucun cookie publicitaire n’est utilisé.</p>
@@ -52,7 +52,7 @@
   <p>Cette politique peut être mise à jour à tout moment. La version en vigueur est toujours accessible à cette adresse.</p>
 
   <h2>9. Contact</h2>
-  <p>Pour toute question relative à la confidentialité, écrivez-nous à <a href="contact@alpacavisual.com">contact@emealy.app</a>.</p>
+  <p>Pour toute question relative à la confidentialité, écrivez-nous à <a href="mailto:contact@alpacavisual.com">contact@emealy.app</a>.</p>
 
   <p><em>Dernière mise à jour : octobre 2025</em></p>
 </body>
