--- a/terms.html
+++ b/terms.html
@@ -29,7 +29,19 @@
   <p>Vous êtes responsable du maintien de la confidentialité de vos identifiants. Toute utilisation de votre compte est réputée avoir été faite par vous.</p>
 
   <h2>5. Abonnements et paiements</h2>
-  <p>L’accès à certaines fonctionnalités est soumis à un abonnement. Les paiements sont gérés via l’App Store et soumis à leurs conditions. Aucune donnée bancaire n’est stockée par Emealy.</p>
+  <p>L’accès à certaines fonctionnalités est soumis à un abonnement <strong>Emealy Premium</strong>.</p>
+
+  <ul>
+    <li><strong>Nom de l’abonnement :</strong> Emealy Premium</li>
+    <li><strong>Durée :</strong> renouvellement automatique mensuel (ou annuel selon l’offre choisie)</li>
+    <li><strong>Prix :</strong> visible sur l’App Store au moment de l’achat</li>
+  </ul>
+
+  <p>Le paiement est facturé sur le compte iTunes de l’utilisateur lors de la confirmation de l’achat. L’abonnement se renouvelle automatiquement à la fin de chaque période, sauf si le renouvellement automatique est désactivé au moins 24 heures avant la fin de la période en cours. La gestion de l’abonnement et la désactivation du renouvellement automatique peuvent être effectuées dans les <strong>paramètres du compte App Store</strong> après l’achat.</p>
+
+  <p>Les données liées aux abonnements (achat, renouvellement, statut premium) sont gérées par <strong>RevenueCat</strong>, un service tiers conforme aux politiques de confidentialité d’Apple. Aucune donnée bancaire n’est stockée par Emealy.</p>
+
+  <p>Pour plus d’informations sur la gestion de vos données, consultez notre <a href="https://ton-site.com/privacy-policy">Politique de confidentialité</a>.</p>
 
   <h2>6. Propriété intellectuelle</h2>
   <p>L’ensemble des éléments de l’application (logo, interface, textes, images, code source, etc.) est la propriété exclusive de Emealy. Toute reproduction ou diffusion non autorisée est interdite.</p>
@@ -41,9 +53,10 @@
   <p>Nous nous réservons le droit de modifier les présentes conditions à tout moment. La version la plus récente est toujours disponible sur cette page.</p>
 
   <h2>9. Contact</h2>
-  <p>Pour toute question, écrivez-nous à <a href="contact@alpacavisual.com">contact@emealy.app</a>.</p>
+  <p>Pour toute question, écrivez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
 
   <p><em>Dernière mise à jour : octobre 2025</em></p>
 </body>
 </html>
+
 
