Fix typos and update email addresses in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
     <li>Données d’utilisation liées aux recettes générées (nombre total de recettes, nombre sur 7 jours glissants, recettes générées associées à l’utilisateur)</li>
     <li>Historique des achats et actions liées à l’utilisateur</li>
   </ul>
-  <p>Aucune donnée sensible n’est requise</p>
+  <p>Aucune donnée sensible n’est requise.</p>
 
   <h2>2. Finalité de la collecte</h2>
   <p>Les données collectées permettent de :</p>
@@ -39,11 +39,12 @@
   <h2>4. Sécurité</h2>
   <p>Nous mettons en œuvre des mesures techniques et organisationnelles pour protéger vos données contre tout accès non autorisé, modification, divulgation ou destruction.</p>
 
-  <h2>5. Conservation</h2>
+  <h2>5. Conservation et suppression</h2>
   <p>Les données sont conservées aussi longtemps que nécessaire pour fournir le service ou conformément à la législation en vigueur. Vous pouvez demander leur suppression à tout moment.</p>
+  <p>En cas de suppression de votre compte, toutes vos données personnelles sont supprimées ou anonymisées. Les recettes que vous avez générées restent accessibles dans le service, mais elles sont définitivement déliées de votre identité (aucune information ne permet de les rattacher à vous).</p>
 
   <h2>6. Vos droits</h2>
-  <p>Conformément au RGPD, vous disposez d’un droit d’accès, de rectification, de suppression et de portabilité de vos données. Pour exercer ces droits, contactez-nous à <a href="mailto:contact@alpacavisual.com">contact@emealy.app</a>.</p>
+  <p>Conformément au RGPD, vous disposez d’un droit d’accès, de rectification, de suppression et de portabilité de vos données. Pour exercer ces droits, contactez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
 
   <h2>7. Cookies et analyses</h2>
   <p>Emealy peut utiliser des outils d’analyse anonymisés pour améliorer ses performances (par ex. statistiques d’usage). Aucun cookie publicitaire n’est utilisé.</p>
@@ -52,7 +53,7 @@
   <p>Cette politique peut être mise à jour à tout moment. La version en vigueur est toujours accessible à cette adresse.</p>
 
   <h2>9. Contact</h2>
-  <p>Pour toute question relative à la confidentialité, écrivez-nous à <a href="mailto:contact@alpacavisual.com">contact@emealy.app</a>.</p>
+  <p>Pour toute question relative à la confidentialité, écrivez-nous à <a href="mailto:contact@emealy.app">contact@emealy.app</a>.</p>
 
   <p><em>Dernière mise à jour : octobre 2025</em></p>
 </body>
