--- a/mentions.html
+++ b/mentions.html
@@ -51,10 +51,10 @@
 
   <h2>5. Désabonnement</h2>
   <p>
-    Vous pouvez demander la résiliation de votre abonnement à tout moment.<br />
-    Pour cela, il suffit d’envoyer un e-mail à <a href="mailto:support@emealy.app">support@emealy.app</a> avec l’objet <em>« Demande de désabonnement »</em>.<br />
-    Votre demande sera traitée dans un délai maximum de <strong>48 heures ouvrées</strong>.<br />
-    <em>(Cette procédure est temporaire le temps de la mise à jour de la version 1, qui simplifiera le désabonnement directement depuis l’application.)</em>
+    Vous pouvez à tout moment résilier votre abonnement directement depuis l’application, dans la section <em>Abonnement</em> de votre profil.<br />
+    La résiliation prend effet immédiatement.<br /><br />
+    Pour les membres ayant souscrit un abonnement via une plateforme tierce (par exemple Apple ou Google), la résiliation doit être effectuée directement depuis cette plateforme.<br />
+    Emealy ne peut pas annuler ces abonnements à votre place.
   </p>
 
   <h2>6. Responsabilité</h2>
